# prtcl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bootstrap.py  test_a.vtk
core/: CMakeLists.txt
core/include/prtcl/core/: common.hpp  constants.hpp  constpow.hpp  dtype.hpp  enumerator_name.hpp  identity.hpp  invalid_enumerator_error.hpp  macros.hpp  make_set.hpp  morton_order.hpp  narray.hpp  nd_dtype.hpp  nd_index.hpp  nd_shape.hpp  ndtype.hpp  overloaded.hpp  range.hpp  remove_cvref.hpp  shape.hpp  value_ptr.hpp  virtual_clock.hpp
core/include/prtcl/core/log/: logger.hpp
core/tests/prtcl/core/: narray.cpp
gt/: CMakeLists.txt
gt/include/prtcl/gt/: ast.hpp  common.hpp  constant.hpp  constant_literals.hpp  dsl.hpp  dsl_to_ast.hpp  eq.hpp  extract_field_requirements.hpp  field.hpp  field_kind.hpp  field_literals.hpp  field_requirements.hpp  field_shape.hpp  field_type.hpp  function.hpp  function_literals.hpp  index_kind.hpp  nd_dtype.hpp  nd_index.hpp  nd_shape.hpp  neighbour_loop.hpp  openmp_generator.hpp  parse_prtcl_source.hpp  parser.hpp  particle_loop.hpp  rd.hpp  schemes_registry.hpp  select_group_type.hpp  xform_helper.hpp
gt/include/prtcl/gt/ast/: ast_leaf_base.hpp  ast_nary_base.hpp  nd_dtype.hpp  (+4 more)
gt/sources/prtcl/gt/: schemes.cpp  schemes_registry.cpp
gt/tests/prtcl/gt/: ast.cpp  constant.cpp  field.cpp  field_kind.cpp  field_requirements.cpp  field_shape.cpp  field_type.cpp  function.cpp
rt/: CMakeLists.txt
rt/include/prtcl/rt/: basic_application.hpp  basic_bcc_lattice_source.hpp  basic_fcc_lattice_source.hpp  basic_group.hpp  basic_hcp_lattice_source.hpp  basic_model.hpp  basic_model_policy.hpp  basic_scg_lattice_source.hpp  basic_source.hpp  basic_type_policy.hpp  camera.hpp  common.hpp  default_model_policy.hpp  eigen_math_policy.hpp  grouped_uniform_grid.hpp  initialize_particles.hpp  integral_grid.hpp  nd_data_base.hpp  neighborhood.hpp  sample_surface.hpp  sample_volume.hpp  save_vtk.hpp  triangle_mesh.hpp  triangle_model.hpp  type_traits.hpp  vector_data_policy.hpp  virtual_clock.hpp
rt/sources/prtcl-sample-mesh/: main.cpp
rt/tests/prtcl/rt/: eigen_math_policy.cpp  grouped_uniform_grid.cpp  vector_data_policy.cpp  virtual_clock.cpp
schemes/: CMakeLists.txt
schemes/include/prtcl/schemes/: aat13.hpp  boundary.hpp  getcwd.hpp  he14.hpp  pt16_solvers.hpp  sesph.hpp  sesph_v2.hpp  symplectic_euler.hpp  test.hpp
schemes/sources/: prtcl-schemes-iisph-horas.cpp  prtcl-schemes-iisph-pt16.cpp  prtcl-schemes-iisph-wkbb18.cpp  prtcl-schemes-iisph.cpp  prtcl-schemes-sesph.cpp
schemes/sources/prtcl/schemes/: getcwd.cpp
schemes/tests/prtcl/schemes/: test_counting_particles.cpp
src/: CMakeLists.txt
src/prtcl/: config.cpp  config.hpp  constpow.cpp  cxx.cpp  cxx.hpp  group.cpp  is_valid_identifier.hpp  log.cpp  log.hpp  math.cpp  math.hpp  model.cpp  model.hpp  morton_order.cpp  scheduler.cpp  tensors.cpp  vector_of_tensors.cpp  virtual_clock.cpp  virtual_clock.hpp
src/prtcl-lua/: entry_point.cpp  entry_point.hpp  main.cpp  main.hpp  module_data.cpp  module_data.hpp  module_geometry.cpp  module_geometry.hpp  module_math.cpp  module_math.hpp  module_schemes.cpp  module_schemes.hpp  module_util.cpp  module_util.hpp
src/prtcl/cxx/: map.hpp  set.hpp  span.hpp  span.inc
src/prtcl/data/: collection_of_mutable_tensors.cpp  collection_of_mutable_tensors.hpp  collection_of_mutable_tensors_impl.cpp  collection_of_mutable_tensors_impl.hpp  component_type.cpp  component_type.hpp  component_type.test.cpp  group.cpp  group.hpp  group.test.cpp  model.cpp  model.hpp  model.test.cpp  shape.cpp  shape.hpp  shape.test.cpp  tensor_type.cpp  tensor_type.hpp  tensor_type.test.cpp  uniform_field.cpp  uniform_field.hpp  uniform_field.test.cpp  uniform_manager.cpp  uniform_manager.hpp  uniform_manager.test.cpp  varying_field.cpp  varying_field.hpp  varying_field.test.cpp  varying_field_manager.cpp  varying_field_manager.hpp  varying_manager.cpp  varying_manager.hpp  varying_manager.test.cpp  vector_of_tensors.cpp  vector_of_tensors.hpp  vector_of_tensors.test.cpp
src/prtcl/errors/: field_does_not_exist.cpp  field_does_not_exist.hpp  field_exists_error.cpp  field_exists_error.hpp  field_of_different_kind_already_exists_error.cpp  field_of_different_kind_already_exists_error.hpp  field_of_different_type_already_exists_error.cpp  field_of_different_type_already_exists_error.hpp  group_of_different_type_already_exists.cpp  group_of_different_type_already_exists.hpp  invalid_identifier_error.cpp  invalid_shape_error.cpp  invalid_shape_error.hpp  not_implemented_error.cpp  not_implemented_error.hpp
src/prtcl/geometry/: pinhole_camera.cpp  pinhole_camera.hpp  sample_surface.cpp  sample_surface.hpp  sample_volume.cpp  sample_volume.hpp  triangle_mesh.cpp  triangle_mesh.hpp
src/prtcl/log/: level.cpp  logger.cpp  logger.hpp  ostream_logger.cpp
src/prtcl/math/: aat13.hpp  common.hpp  constants.hpp  eigen.cpp  eigen.hpp  impl.cpp  impl.hpp  kernel.hpp
src/prtcl/math/impl/: eigen.cpp  eigen.hpp
src/prtcl/math/kernel/: cubic_spline_kernel.cpp  cubic_spline_kernel.hpp  kernel_facade.cpp  kernel_facade.hpp  kernel_traits.cpp  kernel_traits.hpp
src/prtcl/schemes/: aat13.cpp  aat13.hpp  aiast12.cpp  aiast12.hpp  correction.cpp  correction.hpp  density.cpp  density.hpp  gravity.cpp  gravity.hpp  he14.cpp  he14.hpp  horas.cpp  horas.hpp  iisph.cpp  iisph.hpp  pt16.cpp  pt16.hpp  scheme_base.cpp  scheme_base.hpp  sesph.cpp  sesph.hpp  symplectic_euler.cpp  symplectic_euler.hpp  viscosity.cpp  viscosity.hpp  wkbb18.cpp  wkbb18.hpp  wkbb18_gc.cpp  wkbb18_gc.hpp
src/prtcl/solver/: cg_openmp.cpp  cg_openmp.hpp
src/prtcl/util/: archive.cpp  archive.hpp  constpow.cpp  grouped_uniform_grid.cpp  grouped_uniform_grid.hpp  hcp_lattice_source.cpp  hcp_lattice_source.hpp  integral_grid.cpp  integral_grid.hpp  is_valid_identifier.cpp  is_valid_identifier.test.cpp  morton_order.cpp  morton_order.hpp  neighborhood.cpp  neighborhood.hpp  save_vtk.cpp  save_vtk.hpp  scheduler.hpp  sphere_tracer.cpp  sphere_tracer.hpp  virtual_clock.cpp  virtual_clock.hpp
(+451 files in other folders)
